--- a/mdn_torch/data_loss.ipynb
+++ b/mdn_torch/data_loss.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
     "import jax\n",
     "\n",
     "from MDNFullCovariance import MDNFullCovariance\n",
-    "from preditcions_utils import sample_output, check_criteria, run_qsc, round_nfp"
+    "from utils import sample_output, check_criteria, run_qsc, round_nfp"
    ]
   },
   {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,14 +191,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Calculating loss:  67%|██████▋   | 6701/10000 [06:12<02:32, 21.63it/s, total_loss=0.911, axis_length=0.104, iota=0.0515, max_elongation=0.00153, min_L_grad_B=0.798, min_R0=0.796, r_singularity=3.1, L_grad_grad_B=1.12, B20_variation=6.7e-5, beta=3.14, DMerc_times_r2=1.57e-8]     "
+      "Calculating loss:   1%|▏         | 140/10000 [00:26<44:09,  3.72it/s, total_loss=0.75, axis_length=0.0929, iota=0.0306, max_elongation=0.000231, min_L_grad_B=0.609, min_R0=0.62, r_singularity=2.66, L_grad_grad_B=0.701, B20_variation=2.23e-11, beta=2.78, DMerc_times_r2=4.22e-16]           "
      ]
     }
    ],
