--- a/mdn_torch/notebooks/data_loss.ipynb
+++ b/mdn_torch/notebooks/data_loss.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,14 +191,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Calculating loss:   1%|▏         | 140/10000 [00:26<44:09,  3.72it/s, total_loss=0.75, axis_length=0.0929, iota=0.0306, max_elongation=0.000231, min_L_grad_B=0.609, min_R0=0.62, r_singularity=2.66, L_grad_grad_B=0.701, B20_variation=2.23e-11, beta=2.78, DMerc_times_r2=4.22e-16]           "
+      "Calculating loss: 100%|██████████| 10000/10000 [07:57<00:00, 20.95it/s, total_loss=0.274, axis_length=0.0525, iota=0.0255, max_elongation=0.00359, min_L_grad_B=0.299, min_R0=0.359, r_singularity=0.918, L_grad_grad_B=0.436, B20_variation=4.09e-5, beta=0.65, DMerc_times_r2=1.46e-8]   \n"
      ]
     }
    ],
@@ -217,6 +217,9 @@
     "counted = 0\n",
     "from tqdm import tqdm\n",
     "progress_bar = tqdm(range(len(df_gstels)), desc=\"Calculating loss\")\n",
+    "\n",
+    "loss_fn = torch.nn.functional.huber_loss\n",
+    "\n",
     "for i in progress_bar:\n",
     "    model_input = features_norm[i]\n",
     "    with torch.no_grad():\n",
@@ -236,17 +239,17 @@
     "            # Normalize qsc_values\n",
     "            qsc_output_normalized = (torch.tensor(qsc_output).to(device) - mean_std[\"mean\"].to(device)) / mean_std[\"std\"].to(device)\n",
     "            # Loss for each output\n",
-    "            loss_axis_length = torch.nn.functional.mse_loss(model_input[0], qsc_output_normalized[0]).item()\n",
-    "            loss_iota = torch.nn.functional.mse_loss(model_input[1], qsc_output_normalized[1]).item()\n",
-    "            loss_max_elongation = torch.nn.functional.mse_loss(model_input[2], qsc_output_normalized[2]).item()\n",
-    "            loss_min_L_grad_B = torch.nn.functional.mse_loss(model_input[3], qsc_output_normalized[3]).item()\n",
-    "            loss_min_R0 = torch.nn.functional.mse_loss(model_input[4], qsc_output_normalized[4]).item()\n",
-    "            loss_r_singularity = torch.nn.functional.mse_loss(model_input[5], qsc_output_normalized[5]).item()\n",
-    "            loss_L_grad_grad_B = torch.nn.functional.mse_loss(model_input[6], qsc_output_normalized[6]).item()\n",
-    "            loss_B20_variation = torch.nn.functional.mse_loss(model_input[7], qsc_output_normalized[7]).item()\n",
-    "            loss_beta = torch.nn.functional.mse_loss(model_input[8], qsc_output_normalized[8]).item()\n",
-    "            loss_DMerc_times_r2 = torch.nn.functional.mse_loss(model_input[9], qsc_output_normalized[9]).item()\n",
-    "            loss_total = torch.nn.functional.mse_loss(model_input, qsc_output_normalized).item()\n",
+    "            loss_axis_length = loss_fn(model_input[0], qsc_output_normalized[0]).item()\n",
+    "            loss_iota = loss_fn(model_input[1], qsc_output_normalized[1]).item()\n",
+    "            loss_max_elongation = loss_fn(model_input[2], qsc_output_normalized[2]).item()\n",
+    "            loss_min_L_grad_B = loss_fn(model_input[3], qsc_output_normalized[3]).item()\n",
+    "            loss_min_R0 = loss_fn(model_input[4], qsc_output_normalized[4]).item()\n",
+    "            loss_r_singularity = loss_fn(model_input[5], qsc_output_normalized[5]).item()\n",
+    "            loss_L_grad_grad_B = loss_fn(model_input[6], qsc_output_normalized[6]).item()\n",
+    "            loss_B20_variation = loss_fn(model_input[7], qsc_output_normalized[7]).item()\n",
+    "            loss_beta = loss_fn(model_input[8], qsc_output_normalized[8]).item()\n",
+    "            loss_DMerc_times_r2 = loss_fn(model_input[9], qsc_output_normalized[9]).item()\n",
+    "            loss_total = loss_fn(model_input, qsc_output_normalized).item()\n",
     "            # Add if loss is not inf or nan\n",
     "            if not np.isnan(loss_total) and not np.isinf(loss_total):\n",
     "                glob_loss_total += loss_total\n",
@@ -291,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,9 +331,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Calculating loss: 100%|██████████| 10000/10000 [07:33<00:00, 22.05it/s, total_loss=0.208, axis_length=0.0398, iota=0.0274, max_elongation=0.000792, min_L_grad_B=0.342, min_R0=0.366, r_singularity=0.597, L_grad_grad_B=0.442, B20_variation=0.00556, beta=0.264, DMerc_times_r2=0.000128]\n"
+     ]
+    }
+   ],
    "source": [
     "glob_loss_total = 0\n",
     "glob_loss_axis_length = 0\n",
@@ -358,6 +369,9 @@
     "        # Run Qsc\n",
     "        model_outputs = model_outputs.cpu().numpy()[0]\n",
     "        model_outputs = round_nfp(model_outputs)\n",
+    "\n",
+    "        # Loss \n",
+    "        loss_fn = torch.nn.functional.huber_loss\n",
     "        \n",
     "        # Run Qsc\n",
     "        try: \n",
@@ -365,17 +379,17 @@
     "            # Normalize qsc_values\n",
     "            qsc_output_normalized = (torch.tensor(qsc_output).to(device) - mean_std[\"mean\"].to(device)) / mean_std[\"std\"].to(device)\n",
     "            # Loss for each output\n",
-    "            loss_axis_length = torch.nn.functional.mse_loss(model_input[0], qsc_output_normalized[0]).item()\n",
-    "            loss_iota = torch.nn.functional.mse_loss(model_input[1], qsc_output_normalized[1]).item()\n",
-    "            loss_max_elongation = torch.nn.functional.mse_loss(model_input[2], qsc_output_normalized[2]).item()\n",
-    "            loss_min_L_grad_B = torch.nn.functional.mse_loss(model_input[3], qsc_output_normalized[3]).item()\n",
-    "            loss_min_R0 = torch.nn.functional.mse_loss(model_input[4], qsc_output_normalized[4]).item()\n",
-    "            loss_r_singularity = torch.nn.functional.mse_loss(model_input[5], qsc_output_normalized[5]).item()\n",
-    "            loss_L_grad_grad_B = torch.nn.functional.mse_loss(model_input[6], qsc_output_normalized[6]).item()\n",
-    "            loss_B20_variation = torch.nn.functional.mse_loss(model_input[7], qsc_output_normalized[7]).item()\n",
-    "            loss_beta = torch.nn.functional.mse_loss(model_input[8], qsc_output_normalized[8]).item()\n",
-    "            loss_DMerc_times_r2 = torch.nn.functional.mse_loss(model_input[9], qsc_output_normalized[9]).item()\n",
-    "            loss_total = torch.nn.functional.mse_loss(model_input, qsc_output_normalized).item()\n",
+    "            loss_axis_length = loss_fn(model_input[0], qsc_output_normalized[0]).item()\n",
+    "            loss_iota = loss_fn(model_input[1], qsc_output_normalized[1]).item()\n",
+    "            loss_max_elongation = loss_fn(model_input[2], qsc_output_normalized[2]).item()\n",
+    "            loss_min_L_grad_B = loss_fn(model_input[3], qsc_output_normalized[3]).item()\n",
+    "            loss_min_R0 = loss_fn(model_input[4], qsc_output_normalized[4]).item()\n",
+    "            loss_r_singularity = loss_fn(model_input[5], qsc_output_normalized[5]).item()\n",
+    "            loss_L_grad_grad_B = loss_fn(model_input[6], qsc_output_normalized[6]).item()\n",
+    "            loss_B20_variation = loss_fn(model_input[7], qsc_output_normalized[7]).item()\n",
+    "            loss_beta = loss_fn(model_input[8], qsc_output_normalized[8]).item()\n",
+    "            loss_DMerc_times_r2 = loss_fn(model_input[9], qsc_output_normalized[9]).item()\n",
+    "            loss_total = loss_fn(model_input, qsc_output_normalized).item()\n",
     "            # Add if loss is not inf or nan\n",
     "            if not np.isnan(loss_total) and not np.isinf(loss_total):\n",
     "                glob_loss_total += loss_total\n",
