updated model paths on loss notebook

--- a/mdn_torch/notebooks/data_loss.ipynb
+++ b/mdn_torch/notebooks/data_loss.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,12 +24,12 @@
     "from tqdm import tqdm\n",
     "\n",
     "from qsc import Qsc\n",
-    "from MDNFullCovariance import MDNFullCovariance\n",
-    "from utils import sample_output, check_criteria, run_qsc, round_nfp\n",
     "\n",
     "# Set up paths\n",
     "parent_dir = Path.cwd().parent\n",
     "sys.path.append(str(parent_dir))\n",
+    "from MDNFullCovariance import MDNFullCovariance\n",
+    "from utils import sample_output, check_criteria, run_qsc, round_nfp\n",
     "\n",
     "data_dir = Path('../../data')"
    ]
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
     }
    ],
    "source": [
-    "fname_xgstels = data_dir / 'XGStels/XGstels.csv'\n",
+    "fname_xgstels = data_dir / 'XGStels/XGStels.csv'\n",
     "df_xgstels = pd.read_csv(fname_xgstels)\n",
     "\n",
     "# Sample 10000 to make it faster\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,20 +126,8 @@
     "model = MDNFullCovariance(**model_params).to(device)\n",
     "\n",
     "# Load models and mean_stds\n",
-    "models = [ #\"../mdn_torch/models/MDNFullCovariance/2024_03_28_11_53_42.pth\",\n",
-    "#           \"../mdn_torch/models/MDNFullCovariance/2024_03_30_02_40_44.pth\",\n",
-    "#           \"../mdn_torch/models/MDNFullCovariance/2024_04_02_15_47_52.pth\",\n",
-    "#           \"../mdn_torch/models/MDNFullCovariance/2024_04_03_10_03_21.pth\",\n",
-    "#           \"../mdn_torch/models/MDNFullCovariance/2024_04_04_01_37_38.pth\",\n",
-    "#           \"../mdn_torch/models/MDNFullCovariance/2024_04_04_13_41_19.pth\",\n",
-    "            \"../models/MDNFullCovariance/2024_04_05_01_01_18.pth\"]\n",
-    "mean_stds = [   # \"../mdn_torch/models/mean_std.pth\",\n",
-    "                #  \"../mdn_torch/models/mean_std_2.pth\",\n",
-    "                #  \"../mdn_torch/models/mean_std_3.pth\",\n",
-    "                #  \"../mdn_torch/models/mean_std_4.pth\",\n",
-    "                #  \"../mdn_torch/models/mean_std_5.pth\",\n",
-    "                #  \"../mdn_torch/models/mean_std_combined.pth\",\n",
-    "                \"../models/mean_std_5.pth\"]\n",
+    "models = [ \"../models/MDNFullCovariance/model_05.pth\"]\n",
+    "mean_stds = [ \"../models/mean_std_05.pth\"]\n",
     "\n",
     "model_path = models[0]\n",
     "mean_std_path = mean_stds[0]\n",
@@ -160,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,14 +185,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Calculating loss: 100%|██████████| 10000/10000 [07:31<00:00, 22.15it/s, total_loss=0.276, axis_length=0.0539, iota=0.0268, max_elongation=0.000659, min_L_grad_B=0.307, min_R0=0.354, r_singularity=0.917, L_grad_grad_B=0.441, B20_variation=1.68e-5, beta=0.658, DMerc_times_r2=4.36e-6]\n"
+      "Calculating loss: 100%|██████████| 10000/10000 [08:05<00:00, 20.58it/s, total_loss=0.227, axis_length=0.0342, iota=0.0233, max_elongation=0.000326, min_L_grad_B=0.227, min_R0=0.00665, r_singularity=0.907, L_grad_grad_B=0.415, B20_variation=8.99e-5, beta=0.658, DMerc_times_r2=1.65e-10]\n"
      ]
     }
    ],
@@ -300,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,14 +325,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Calculating loss: 100%|██████████| 10000/10000 [08:04<00:00, 20.63it/s, total_loss=0.208, axis_length=0.0401, iota=0.0263, max_elongation=0.000883, min_L_grad_B=0.336, min_R0=0.372, r_singularity=0.6, L_grad_grad_B=0.428, B20_variation=0.000394, beta=0.281, DMerc_times_r2=2.31e-11] \n"
+      "Calculating loss: 100%|██████████| 10000/10000 [07:57<00:00, 20.93it/s, total_loss=0.486, axis_length=0.0618, iota=0.0534, max_elongation=0.0113, min_L_grad_B=0.735, min_R0=0.0531, r_singularity=1.72, L_grad_grad_B=1.12, B20_variation=0.0046, beta=1.1, DMerc_times_r2=5.94e-5]     \n"
      ]
     }
    ],
@@ -377,7 +365,7 @@
     "        model_outputs = round_nfp(model_outputs)\n",
     "\n",
     "        # Loss \n",
-    "        loss_fn = torch.nn.functional.huber_loss\n",
+    "        loss_fn = torch.nn.functional.mse_loss\n",
     "        \n",
     "        # Run Qsc\n",
     "        try: \n",
@@ -448,7 +436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
